--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "skipLibCheck": true,
     "strictPropertyInitialization": false
   },
-  "include": ["src"]
+  "include": ["src", "assets"]
 }
